fix z-index of player

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --snake-body-color: #ca0404;
-  --snake-head-color: #860202;
+  --snake-head-color: #9f0404;
   --player-color: #2f2fe4;
   --food-color: #ecec18;
 }
@@ -18,7 +18,7 @@ body {
   gap: 10px;
 
   color: #f7f7f7;
-  background-color: #363434;
+  background-color: #131212;
 
   margin-top: 20px;
 }
@@ -34,21 +34,34 @@ body {
 }
 
 .cell {
-  border: 2px solid rgba(241, 237, 237, 0.07);
+  border: 2px solid rgba(241, 237, 237, 0.05);
+  position: relative;
+}
+
+.cell > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .player {
   background: var(--player-color);
+  z-index: 2;
 }
 
 .snake-head {
   background: var(--snake-head-color);
+  z-index: 3;
 }
 
 .snake-body {
   background: var(--snake-body-color);
+  z-index: 3;
 }
 
 .food {
   background: var(--food-color);
+  z-index: 1;
 }
